# claude-code-mastery

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASING.md
.claude/: settings.json
.githooks/: pre-commit
codebases/: SEEDED.md
codebases/primary/taskflow-api/: .gitignore  CLAUDE.md  README.md  pyproject.toml
codebases/primary/taskflow-api/.claude/: settings.json
codebases/primary/taskflow-api/app/: __init__.py  main.py
codebases/primary/taskflow-api/app/api/: deps.py  schemas.py
codebases/primary/taskflow-api/app/api/routers/: auth.py  comments.py  projects.py  tasks.py  users.py
codebases/primary/taskflow-api/app/core/: config.py  security.py
codebases/primary/taskflow-api/app/db/: seed.py  session.py
codebases/primary/taskflow-api/app/models/: __init__.py  comment.py  project.py  task.py  user.py
codebases/primary/taskflow-api/app/services/: comments.py  exceptions.py  projects.py  tasks.py  users.py
codebases/primary/taskflow-api/tests/: conftest.py  factory.py  test_auth.py  test_comments.py  test_projects.py  test_security.py  test_services.py  test_tasks.py
course/: maintainer-guide.md  progress-checklist.md  stuck.md
log/: implementation-session-1.txt  implementation-session-10.txt  implementation-session-11.txt  implementation-session-2.txt  implementation-session-3.txt  implementation-session-4.txt  implementation-session-5.txt  implementation-session-6.txt  implementation-session-7.txt  implementation-session-8.txt  implementation-session-9.txt  quality-pass-session-1.txt  spec-creation-session-1.txt  (+1 more)
(+486 files in other folders)
