[project]
name = "taskflow-api"
version = "0.1.0"
description = "TaskFlow — a small task/project tracker REST API (lab substrate for the Claude Code Mastery course)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
